--- a/EduSys/src/main/java/com/edusys/ui/KhoaHocDialog.form
+++ b/EduSys/src/main/java/com/edusys/ui/KhoaHocDialog.form
@@ -163,7 +163,7 @@
                               <Component id="txtThoiLuong" min="-2" pref="201" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
-                              <Component id="jTextField3" min="-2" pref="201" max="-2" attributes="0"/>
+                              <Component id="txtEm" min="-2" pref="201" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="dcsNgaytao" max="32767" attributes="0"/>
                           </Group>
@@ -209,7 +209,7 @@
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jTextField3" min="-2" max="-2" attributes="0"/>
+                          <Component id="txtEm" min="-2" max="-2" attributes="0"/>
                           <Component id="dcsNgaytao" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
@@ -254,9 +254,9 @@
             </Component>
             <Component class="javax.swing.JTextField" name="txtChuyenDe">
             </Component>
-            <Component class="javax.swing.JTextField" name="jTextField3">
+            <Component class="javax.swing.JTextField" name="txtEm">
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextField3ActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtEmActionPerformed"/>
               </Events>
             </Component>
             <Component class="javax.swing.JTextField" name="txtThoiLuong">
